--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
         </section>
         <section class="customers" id="customers">
             <div class="heading">
-                <h2>Our Customer's</h2>
+                <h2> Customer's</h2>
             </div>
             <div class="customers-container">
                 <div class="box">
