--- a/index.html
+++ b/index.html
@@ -260,29 +260,29 @@
             </div>
             <div class="footer-box">
                 <h3>Support</h3>
-                <li><a href="#">Product</a></li>
-                <li><a href="#">Help & Support</a></li> 
-                <li><a href="#">Return Policy</a></li>
-                <li><a href="#">Terms of Use</a></li>
+                <li><a href="#">Products</a></li>
+                <li><a href="#">Help</a></li> 
+                <li><a href="#">Policy</a></li>
+                <li><a href="#">Terms</a></li>
             </div>
             <div class="footer-box">
                 <h3>View Guides</h3>
                 <li><a href="#">Features</a></li>
                 <li><a href="#">Career</a></li> 
-                <li><a href="#">Blog Posts</a></li>
-                <li><a href="#">Our Branches</a></li>
+                <li><a href="#">Blogs</a></li>
+                <li><a href="#">Branches</a></li>
             </div>
             <div class="footer-box">
                 <h3>Contact</h3>
                 <div class="contact">
-                    <span><i class='bx bx-map' ></i>250 New York City, USA 10001</span>
-                    <span><i class='bx bx-phone' ></i>+1 444 744 8444</span>
-                    <span><i class='bx bx-envelop' ></i>coffe@shop.com</span>
+                    <span><i class='bx bx-map' ></i>264 San Diego, California 415/628</span>
+                    <span><i class='bx bx-phone' ></i>+91 9391366042</span>
+                    <span><i class='bx bx-envelop' ></i>coffe@.com</span>
                 </div>
             </div>
         </section>
         <div class="copyright">
-            <p>&#169; CarpoolVenom All Rights Reserved</p>
+            <p>&#169;  All Rights Reserved</p>
         </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 
